--- a/src/Core.Reference/Resources/Messages.resx
+++ b/src/Core.Reference/Resources/Messages.resx
@@ -117,7 +117,175 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AngleArrayIsNull" xml:space="preserve">
+    <value>The array of angles is null.</value>
+  </data>
+  <data name="AreaOfUseIsNull" xml:space="preserve">
+    <value>The area of use is null.</value>
+  </data>
+  <data name="AxisNameIsInvalid" xml:space="preserve">
+    <value>The coordinate system does not contain an axis with the specified name.</value>
+  </data>
+  <data name="AxisNameIsNull" xml:space="preserve">
+    <value>The axis name is null.</value>
+  </data>
+  <data name="BaseReferenceSystemIsNull" xml:space="preserve">
+    <value>The base reference system is null.</value>
+  </data>
+  <data name="CoordinatesAreNull" xml:space="preserve">
+    <value>No coordinates are specified.</value>
+  </data>
+  <data name="CoordinateSystemIsNull" xml:space="preserve">
+    <value>The coordinate system is null.</value>
+  </data>
+  <data name="DatumIsNull" xml:space="preserve">
+    <value>The datum is null.</value>
+  </data>
+  <data name="EccentricityIsEqualToOrLessThan0" xml:space="preserve">
+    <value>The eccentricity is equal to or less than 0.</value>
+  </data>
+  <data name="EccentricityIsGreaterThan1" xml:space="preserve">
+    <value>The eccentricity greater than 1.</value>
+  </data>
+  <data name="EllipsoidIsNull" xml:space="preserve">
+    <value>The ellipsoid is null.</value>
+  </data>
+  <data name="FlatteningIsEqualToOrLessThan0" xml:space="preserve">
+    <value>The flattening is equal to or less than 0.</value>
+  </data>
+  <data name="FlatteningIsGreaterThan1" xml:space="preserve">
+    <value>The flattening greater than 1.</value>
+  </data>
+  <data name="IdentifierIsNull" xml:space="preserve">
+    <value>The identifier is null.</value>
+  </data>
+  <data name="IndexEqualToOrGreaterThanAxisCount" xml:space="preserve">
+    <value>The index is equal to or greater than the number of axis.</value>
+  </data>
+  <data name="IndexIsLessThan0" xml:space="preserve">
+    <value>The index is less than 0.</value>
+  </data>
+  <data name="InverseFlatteningLessThan1" xml:space="preserve">
+    <value>The inverse flattening is less than 1.</value>
+  </data>
+  <data name="LatitudeInvalid" xml:space="preserve">
+    <value>The latitude is invalid.</value>
+  </data>
+  <data name="LongitudeOutOfRangeDegrees" xml:space="preserve">
+    <value>Longitude value is not between -180 and 180 degrees.</value>
+  </data>
+  <data name="LongitudeOutOfRangeRadians" xml:space="preserve">
+    <value>Longitude value is not between -PI and +PI radians.</value>
+  </data>
+  <data name="MaximumIsEqualToOrLessThanMinimum" xml:space="preserve">
+    <value>The maximum value is equal to or less than the minimum value.</value>
+  </data>
+  <data name="MethodInternalsNot3" xml:space="preserve">
+    <value>The specified method does not contain 3 internal methods.</value>
+  </data>
+  <data name="MethodInternalsNot5" xml:space="preserve">
+    <value>The specified method does not contain 5 internal methods.</value>
+  </data>
+  <data name="MethodIsNull" xml:space="preserve">
+    <value>The method is null.</value>
+  </data>
+  <data name="NameIsNull" xml:space="preserve">
+    <value>The name is null.</value>
+  </data>
+  <data name="NoAxisSpecified" xml:space="preserve">
+    <value>No axis is specified for the coordinate system.</value>
+  </data>
+  <data name="NoComponentsAreSpecified" xml:space="preserve">
+    <value>No components are specified.</value>
+  </data>
+  <data name="NoMethodsSpecified" xml:space="preserve">
+    <value>No methods are specified.</value>
+  </data>
+  <data name="OperationNotReversible" xml:space="preserve">
+    <value>Coordinate operation is not reversible.</value>
+  </data>
+  <data name="PolynomialTransformationDegreeIsInvalid" xml:space="preserve">
+    <value>No general polynomial transformation is available for the given degree.</value>
+  </data>
+  <data name="PrimeMeridianIsNull" xml:space="preserve">
+    <value>The prime meridian is null.</value>
+  </data>
+  <data name="ProjectionIsNull" xml:space="preserve">
+    <value>The projection is null.</value>
+  </data>
+  <data name="SemiAxisIsEqualToOrLessThan0" xml:space="preserve">
+    <value>The semi axis is equal to or less than 0.</value>
+  </data>
+  <data name="SemiMajorAxisIsEqualToOrLessThan0" xml:space="preserve">
+    <value>The semi-major axis is equal to or less than 0.</value>
+  </data>
+  <data name="SemiMajorAxisUnitNotEqualToSemiMinorAxisUnit" xml:space="preserve">
+    <value>The semi-minor axis is not measured in the same measurement unit as the semi-major axis.</value>
+  </data>
+  <data name="SemiMinorAxisGreaterThaneSemiMajorAxis" xml:space="preserve">
+    <value>The semi-minor axis is grater than the semi-major axis.</value>
+  </data>
+  <data name="SemiMinorAxisIsEqualToOrLessThan0" xml:space="preserve">
+    <value>The semi-minor axis is equal to or less than 0.</value>
+  </data>
+  <data name="SourceCoordinateReferenceSystemIsNull" xml:space="preserve">
+    <value>The source coordinate reference system is null.</value>
+  </data>
+  <data name="TargetCoordinateReferenceSystemIsNull" xml:space="preserve">
+    <value>The target coordinate reference system is null.</value>
+  </data>
+  <data name="UnitIsNotLength" xml:space="preserve">
+    <value>The unit of measurement is not a length measure.</value>
+  </data>
+  <data name="UnitIsNull" xml:space="preserve">
+    <value>The unit of measurement is null.</value>
+  </data>
+  <data name="UnitOfMeasurementIsInvalid" xml:space="preserve">
+    <value>The unit of measurement is invalid.</value>
+  </data>
+  <data name="UnitOfMeasurementIsNull" xml:space="preserve">
+    <value>The unit of measurement is null.</value>
+  </data>
+  <data name="VectorComputationOnlySupportedOnSphere" xml:space="preserve">
+    <value>Vector computation is only supported on sphere.</value>
+  </data>
+  <data name="AngularUnitOfMeasurementIsInvalid" xml:space="preserve">
+    <value>The angular unit of measurement is invalid.</value>
+  </data>
+  <data name="AngularUnitOfMeasurementIsNull" xml:space="preserve">
+    <value>The angular unit of measurement is null.</value>
+  </data>
+  <data name="CoordinateIsNull" xml:space="preserve">
+    <value>The coordinate is null.</value>
+  </data>
+  <data name="LengthUnitOfMeasurementIsInvalid" xml:space="preserve">
+    <value>The length unit of measurement is invalid.</value>
+  </data>
+  <data name="LengthUnitOfMeasurementIsNull" xml:space="preserve">
+    <value>The length unit of measurement is null.</value>
+  </data>
+  <data name="OtherEnvelopeIsNull" xml:space="preserve">
+    <value>The other envelope is null.</value>
+  </data>
   <data name="BaseMultipleIs0" xml:space="preserve">
     <value>The base multiple is 0.</value>
+  </data>
+  <data name="LengthArrayIsNull" xml:space="preserve">
+    <value>The array of length values is null.</value>
+  </data>
+  <data name="DestinationCoordinateIsNull" xml:space="preserve">
+    <value>The destination coordinate is null.</value>
+  </data>
+  <data name="SourceCoordinateIsNull" xml:space="preserve">
+    <value>The source coordinate is null.</value>
+  </data>
+  <data name="VectorIsNull" xml:space="preserve">
+    <value>The vector is null.</value>
+  </data>
+  <data name="AngleCollectionIsNull" xml:space="preserve">
+    <value>The collection of angles is null.</value>
+  </data>
+  <data name="LengthCollectionIsNull" xml:space="preserve">
+    <value>The collection of length values is null.</value>
   </data>
 </root>
