Core: Added queries for collection containing references. Queries are implemented as extension methods in ReferenceCollectionQueries.

--- a/src/Core.Reference/Resources/Messages.resx
+++ b/src/Core.Reference/Resources/Messages.resx
@@ -288,4 +288,7 @@
   <data name="LengthCollectionIsNull" xml:space="preserve">
     <value>The collection of length values is null.</value>
   </data>
+  <data name="CollectionIsNull" xml:space="preserve">
+    <value>The collection is null.</value>
+  </data>
 </root>
