Core: Added strategies for converting coordinates between reference systems. The ICoordinateOperationStrategy interface encapsulates functionality of various operations, including converting between geographic and Cartesian coordinates. The CoordinateOperationStrategyFactory type creates strategies based on the specified source and target reference systems using the specified collections.

--- a/src/Core.Reference/Resources/Messages.resx
+++ b/src/Core.Reference/Resources/Messages.resx
@@ -330,4 +330,25 @@
   <data name="CollectionContainerIsNull" xml:space="preserve">
     <value>The collection container is null.</value>
   </data>
+  <data name="ConversionIsNull" xml:space="preserve">
+    <value>The conversion is null.</value>
+  </data>
+  <data name="ReferenceSystemIsNull" xml:space="preserve">
+    <value>The reference system is null.</value>
+  </data>
+  <data name="SourceReferenceSystemIsNull" xml:space="preserve">
+    <value>The source reference system is null.</value>
+  </data>
+  <data name="TargetReferenceSystemIsNull" xml:space="preserve">
+    <value>The target reference system is null.</value>
+  </data>
+  <data name="TransformationIsNull" xml:space="preserve">
+    <value>The transformation is null.</value>
+  </data>
+  <data name="CoordinateSystemDimensionLessThanExpected" xml:space="preserve">
+    <value>The dimension of the coordinate system is less than expected.</value>
+  </data>
+  <data name="ConversionDoesNotExistBetweenReferenceSystems" xml:space="preserve">
+    <value>Conversion does not exist between the specified reference systems.</value>
+  </data>
 </root>
