Finish implementation of M-Tree
- Finished implementation of M-Tree
- Added some unit tests and documentation

--- a/src/Core/Resources/CoreMessages.resx
+++ b/src/Core/Resources/CoreMessages.resx
@@ -141,9 +141,6 @@
   <data name="DimensionIsLessThan2" xml:space="preserve">
     <value>The dimension is less than 2.</value>
   </data>
-  <data name="DistanceMetricIsMissing" xml:space="preserve">
-    <value>Distance metric is null. You must specify a distance metric.</value>
-  </data>
   <data name="EnvelopeMinIsGreaterThanMax" xml:space="preserve">
     <value>The envelope's minimum coordinate is greater than the maximum coordinate.</value>
   </data>
@@ -180,6 +177,9 @@
   <data name="IndexIsEqualToOrGreaterThanNumberOfCoordinates" xml:space="preserve">
     <value>The index is equal to or greater than the number of coordinates.</value>
   </data>
+  <data name="InvalidObjectEquality" xml:space="preserve">
+    <value>The Equals() method for the given type returns false for the same instances.</value>
+  </data>
   <data name="ItemIdentifierExists" xml:space="preserve">
     <value>An item with the same identifier already exists in the collection.</value>
   </data>
@@ -210,12 +210,6 @@
   <data name="OtherGeometryNotSupported" xml:space="preserve">
     <value>The type of the other geometry is not supported.</value>
   </data>
-  <data name="PartitionPolicyIsMissing" xml:space="preserve">
-    <value>Partition policy is null. You must specify a partition policy.</value>
-  </data>
-  <data name="PromotePolicyIsMissing" xml:space="preserve">
-    <value>Promote policy is null. You must specify a promote policy.</value>
-  </data>
   <data name="ScaleIsEqualToOrLessThan0" xml:space="preserve">
     <value>The scale is equal to or less than 0.</value>
   </data>
@@ -230,8 +224,5 @@
   </data>
   <data name="SourceIsNotSupported" xml:space="preserve">
     <value>The specified source is not supported.</value>
-  </data>
-  <data name="SplitPolicyIsMissing" xml:space="preserve">
-    <value>Split policy is null. You must specify a split policy.</value>
   </data>
 </root>
